@@ -1845,19 +1845,19 @@ statvfs (const char *fname, struct statvfs *sfs)
 	  if (freec > availc)
 	    {
 	      /* Quotas active.  We can't trust totalc. */
-	      HANDLE hdl = CreateFile (full_path.get_win32 (), READ_CONTROL,
+	      HANDLE hdl = CreateFile (full_path, READ_CONTROL,
 				       wincap.shared (), &sec_none_nih,
 				       OPEN_EXISTING,
 				       FILE_FLAG_BACKUP_SEMANTICS, NULL);
 	      if (hdl == INVALID_HANDLE_VALUE)
-	        debug_printf ("CreateFile (%s) failed, %E", full_path.get_win32 ());
+	        debug_printf ("CreateFile (%s) failed, %E", full_path);
 	      else
 	        {
 		  NTFS_VOLUME_DATA_BUFFER nvdb;
 		  DWORD bytes;
 		  if (!DeviceIoControl (hdl, FSCTL_GET_NTFS_VOLUME_DATA, NULL,
 					0, &nvdb, sizeof nvdb, &bytes, NULL))
-		    debug_printf ("DeviceIoControl (%s) failed, %E", full_path.get_win32 ());
+		    debug_printf ("DeviceIoControl (%s) failed, %E", full_path);
 		  else
 		    totalc = nvdb.TotalClusters.QuadPart;
 		  CloseHandle (hdl);
